--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
     </style>
     <title>Vite + React</title>
 </head>
 
-<body class="">
+<body class="font-['Work-Sans'] bg-gray-100 text-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
