--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="hUTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+        /* Google font - Work Sans */
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+        body {
+            font-family: 'Work Sans', sans-serif;
+        }
     </style>
-    <title>Vite + React</title>
+
+    <title>Picto Personal portfolio</title>
 </head>
 
-<body class="font-['Work-Sans'] bg-gray-100 text-gray-900">
+<body class="bg-white text-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
