--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Picto Personal portfolio</title>
 </head>
 
-<body class="bg-white text-gray-900 dark">
+<body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="https://unpkg.com/cally"></script>
