--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="hUTF-8" />
     <link rel="icon" type="image/svg+xml" class="rounded-b-4xl w-8 text-white" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/index.css">
 
     <style>
         /* Google font - Work Sans */
         @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-        body {
-            font-family: 'Work Sans', sans-serif;
-        }
     </style>
 
     <title>Picto Personal portfolio</title>
