--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="">
-    <div id="root"></div>
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="https://unpkg.com/cally"></script>
 </body>
